deployment/mesh-infra/routing/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: "kitt4sme-gateway"
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: false
  - hosts:
    - "*"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-gw-cert
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: "kitt4sme-virtual-service"
spec:
  gateways:
  - "kitt4sme-gateway"
  hosts:
  - "*"
  http:
  - match:  # NOTE (1)
    - uri:
        prefix: /orion/
    - uri:
        prefix: /orion
    rewrite:
      uri: /
    route:
    - destination:
        host: orion.default.svc.cluster.local
        port:
          number: 1026
  - match:  # NOTE (1)
    - uri:
        prefix: /quantumleap/
    - uri:
        prefix: /quantumleap
    rewrite:
      uri: /
    route:
    - destination:
        host: quantumleap.default.svc.cluster.local
        port:
          number: 8668
  - match:  # NOTE (2)
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak.default.svc.cluster.local
        port:
          number: 8080
  - match:  # NOTE (1)
    - uri:
        prefix: /argocd/
    - uri:
        prefix: /argocd
    rewrite:
      uri: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /mqtt/
    rewrite:
      uri: /
    route:
    - destination:
        host: mosquitto.default.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /ulagent/
    rewrite:
      uri: /
    route:
    - destination:
        host: ulagent.default.svc.cluster.local
        port:
          number: 7896
  - match:
    - uri:
        prefix: /jsonagent/
    rewrite:
      uri: /
    route:
    - destination:
        host: jsonagent.default.svc.cluster.local
        port:
          number: 7896
  # TODO: Remove this route once the new datasheets frontend is ready
  - match:
    - uri:
        prefix: /datasheets/
    rewrite:
      uri: /
    route:
    - destination:
        host: datasheet-frontend.default.svc.cluster.local
        port:
          number: 3000
  - match:
    - authority:
        exact: "datasheets.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: datasheet-frontend.default.svc.cluster.local
        port:
          number: 3000
  # TODO: Remove this route once the new datasheets backend is ready
  - match:
    - uri:
        prefix: /datasheets-backend-rest/
    rewrite:
      uri: /
    route:
    - destination:
        host: datasheet-backend.default.svc.cluster.local
        port:
          number: 5000
  - match:
    - authority:
        exact: "datasheets-backend.kitt4sme.collab-cloud.eu "
    route:
    - destination:
        host: datasheet-backend.default.svc.cluster.local
        port:
          number: 5000
  - match:
    - uri:
        prefix: /home/
    rewrite:
      uri: /
    route:
    - destination:
        host: static-page.default.svc.cluster.local
        port:
          number: 80
  - match:
    - authority:
        exact: "www.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: static-page.default.svc.cluster.local
        port:
          number: 80
  - match:
    - authority:
        exact: "profilers.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: profilers.default.svc.cluster.local
        port:
          number: 8080  
  - match:
    - authority:
        exact: "matchmaking.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: matchmaking.default.svc.cluster.local
        port:
          number: 8081
  - match:  # NOTE (6)
    - authority:
        exact: "aq.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: aq.default.svc.cluster.local
        port:
          number: 8080
  - match:
    - authority:
        exact: "intervention-manager.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: intervention-manager.default.svc.cluster.local
        port:
          number: 8080
  - match:  # NOTE (3)
    - authority:
        exact: "dazzler.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: dazzler.default.svc.cluster.local
        port:
          number: 8000
  - match:
    - authority:
        exact: "optiplant.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: optiplant.default.svc.cluster.local
        port:
          number: 5000
  - match:
    - authority:
        exact: "platform-configurator.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: platform-configurator.default.svc.cluster.local
        port:
          number: 8000
  - match:
    - authority:
        exact: "sads.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: sads-offline.default.svc.cluster.local
        port:
          number: 8501
  - match:
    - authority:
        exact: "viqe.kitt4sme.collab-cloud.eu"
    route:
    - destination:
        host: viqe.default.svc.cluster.local
        port:
          number: 8000

# NOTE
# 1. URL rewriting. We use overlapping prefixes to make sure `/x`, `/x/`
# and `/x/p` get rewritten to `/`, `/` and `/p` respectively. Istio will
# moan about it, e.g.
#
#   Warning: virtualService rule #3 match #0 of prefix /argocd/ is not used
#           (duplicate/overlapping match in rule #1 of prefix /argocd on #3)
#
# But if you take out either URI prefix match, things will break---e.g.
# try navigating to the Argo CD UI.
# See:
# - https://github.com/istio/istio/issues/8076
#
# 2. Keycloak base path. Keycloak is configured with a `web-context`
# of `auth`, which makes every URL in the UI is relative to `/auth`.
# So we don't need a rewrite rule in this case.
#
# 3. Dazzler base path. Dazzler is configured with a root URL of
# `dazzler`, which makes every URL in the UI relative to `/dazzler`.
# So we don't need a rewrite rule in this case.
#
# 4. SADS offline routing. This routing rule must come before the
# one for SADS classic. This is because we're using a prefix match
# in both cases: `/sads-offline` and `/sads`. So if we invert the
# order, both routes will hit SADS classic:
# - https://github.com/c0c0n3/kitt4sme.live/issues/238
# Why not use a regex match? In principle it's a better option since
# it avoids reliance on Istio match order, which is a bit of a hack.
# For example,
#
#   - match:
#     - uri:
#         regex: /(sads$|sads[^-])
#
# should match `/sads`, `/sads/`, `/sads/wada-wada` but not `/sads-offline`.
# Unfortunately, that regex doesn't work with Istio 1.11.4. Hence the
# hack. Finally, notice the SADS offline Steamlit server is configured
# with a root URL of `sads-offline`, which makes every URL in the UI
# relative to `/sads-offline`.  So we don't need a rewrite rule in
# this case.
#
# 5. SADS base path. The Streamlit server is configured with a root
# URL of `sads`, which makes every URL in the UI relative to `/sads`.
# So we don't need a rewrite rule in this case.
#
# 6. AQ base path. The Servlet container is configured with a root
# URL of `/aq`, which makes every URL in the UI relative to `/aq`.
# So we don't need a rewrite rule in this case.
